--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "express-handlebars": "^3.0.2",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
     "mysql": "^2.16.0"
   },
   "devDependencies": {},
